# dealerindustries

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  run.sh  vercel.json  verify.py  verify_new.py
app/: __init__.py  aggregator.py  config.py  main.py  pdf_advisor_pages.py  pdf_report.py  pdf_team_stats.py
app/menu/: admin_models.py  admin_routes.py  admin_store.py  calculations.py  models.py  pdf_exports.py  routes.py  store.py  template_data.py
app/parsers/: advisor.py  opcode.py
app/parsers/cdk/: __init__.py  advisor_recap.py  advisor_recap_csv.py  export_pipeline.py  gemini_vision.py  ocr.py  opcode_analysis.py  opcode_history.py  pipeline.py
app/static/: home.html  menu-builder.html  menu-project.html  product-admin.html  reports.html
app/static/css/: app.css  menu-wizard.css
app/static/js/: menu-wizard.js  product-admin.js
config/: 1_6197.json  classic_kia_carrollton.json  default.json  dynatron_bardahl.json  grubbs_cdjr_of_wichita_falls.json  unknown_dealership.json
